Prepare for load test.

--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Fabric-posta-app",
     "version": "1.0.0",
-    "description": "Hyperledger Fabric MOOC Sample Application",
+    "description": "Hyperledger Fabric Sample Application",
     "main": "server.js",
     "dependencies": {
         "angular": "^1.4.3",
@@ -10,7 +10,8 @@
         "express": "latest",
         "fabric-ca-client": "^1.0.2",
         "fabric-client": "^1.3.0",
-        "grpc": "^1.12.3"
+        "grpc": "^1.12.3",
+        "system-sleep": "^1.3.6"
     },
     "license": "Apache-2.0",
     "keywords": [
