--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "angular": "^1.4.3",
         "body-parser": "latest",
+        "bootstrap": "^4.2.1",
         "ejs": "latest",
         "express": "latest",
         "fabric-ca-client": "^1.0.2",
